--- a/main.css
+++ b/main.css
@@ -2,12 +2,13 @@ body{
   background-image: url('https://images.unsplash.com/uploads/14116941824817ba1f28e/78c8dff1?ixlib=rb-0.3.5&s=1b18a99bd071f03f1331789065b3705a&auto=format&fit=crop&w=1280&q=80');
   background-repeat: no-repeat;
   color: #B3A125;
-  text-align: center;
+  text-align: center; 
   margin: 0;
   padding: 0;
 }
 h1{
   margin-top: 3%;
+  text-align: center;
 }
 
 #logo{
@@ -16,12 +17,15 @@ h1{
   margin-right: auto;
   display: block;
 }
-hr{
+/* hr{
+  text-align: center;
   color: #B3A125;
-}
+} */
 #underline{
+  display: inline-block;
+  text-align: center;
   border-bottom: solid #B3A125 2px;
-  padding-left: 80%;
+  padding-right: 60%;
   opacity: 0.7;
 }
 #trainer{
@@ -29,9 +33,9 @@ hr{
   z-index: 1;
   margin-top: 3%;
   width: 13%;
-  margin-left: auto;
-  margin-right: auto;
-  display: inline-block;
+  /* margin-left: auto;
+  margin-right: auto; */
+  /* display: inline-block; */
 }
 #greatball{
   width: 4%;
@@ -47,7 +51,14 @@ hr{
   animation: enlarge 3s forwards;
   animation-delay: 6s;
 }
-
+#poke1{
+  position: relative;
+  width: 20%;
+  text-align: left;
+}
+.deBlock{
+  display: inline-block;
+}
 /* KEYFRAMES */
 
 @keyframes move {
