--- a/main.css
+++ b/main.css
@@ -95,6 +95,14 @@ br{
   margin-left: 15%;
   width: 35%;
 }
+.adjusted{
+  position: relative;
+  right: 25em;
+  top: 5em;
+}
+.invis{
+  opacity:0;
+}
 
 /* KEYFRAMES */
 
